ADded Promo vid to main page. Altered Styling on projects page.

--- a/pages/Main.html
+++ b/pages/Main.html
@@ -29,8 +29,8 @@
         <!--------------------------------START NAVBAR------------------------------>
         <nav class="navbar navbar-custom navbar-fixed-top">
             <div class="container">
-                <a class="navbar-brand hidden-sm" href="http://http://www.calstatela.edu/">
-                    <img alt="acm" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
+                <a class="navbar-brand hidden-sm" href="https://www.calstatela.edu/" target="_blank">
+                    <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
                 </a>
 
                 <div class="collapse navbar-collapse">
@@ -49,26 +49,14 @@
                             <ul class="dropdown-menu">
                                 <li><a href="contact.html">All Media</a></li>
                                 <li><a href="contact.html">Email</a></li>
-                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                                 <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                        target="_blank">YouTube</a></li>
+                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                                 <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
                             </ul>
 
-                            <!--<li class="dropdown">-->
-                            <!--<a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
-                            <!--aria-haspopup="true"-->
-                            <!--aria-expanded="false">Officers<span class="caret"></span></a>-->
-                            <!--<ul class="dropdown-menu">-->
-                            <!--<li><a href="officers.html">All Officers</a></li>-->
-                            <!--<li><a href="officers.html?id=1">President</a></li>-->
-                            <!--<li><a href="officers.html?id=2">Vice President</a></li>-->
-                            <!--<li><a href="officers.html?id=3">Treasurer</a></li>-->
-                            <!--<li><a href="officers.html?id=4">Additional Officers</a></li>-->
-                            <!--</ul>-->
-                            <!--</li>-->
                     </ul>
 
                 </div>
@@ -82,13 +70,9 @@
         <!------------------------------------START HEADER---------------------------->
         <div class="container-fluid">
             <div class="container">
-                <div class="row page-header">
+                <div class="row page-header filmlogo">
                     <header style="margin-top: 3%">
-
-                        <!--<div class="col-xs-offset-6 col-xs-2">-->
-                            <!--<img src="../Images/FPC%20Camera.png" class="img-responsive">-->
-                        <!--</div>-->
-                        <img class="col-xs-offset-5 col-xs-2" src="../Images/FPC%20Camera.png">
+                        <img class="col-xs-offset-2 col-xs-3" src="../Images/FPC%20Camera.png">
                         <div class="text-right col-xs-4 col-xs-offset-1">
                             <h1>
                                 <strong>Film Productions Club</strong><br/>
@@ -102,14 +86,10 @@
         </div>
             <!---------------------------END HEADER--------------------------->
 
-
-
+            <!-- INSERT INTRO VIDEO HERE -->
+        <iframe class="center-block" width="560" height="315" src="https://www.youtube-nocookie.com/embed/gIJeK_isnyQ?loop=1&amp;rel=0&amp;controls=1&amp;&playlist=gIJeK_isnyQ&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="border-width:2px"></iframe>
             <!-------------------------START PAGE CONTENT----------------------------->
-
-            <!------------- Add the floating gif --------------->
-            <!--<div class="gif-container">-->
-                <!--<img class="gif" src="../Images/combo(framed).gif" >-->
-            <!--</div>-->
+\
 
             <div class="container">
                 <!-- Begin our first row of data -->
@@ -120,16 +100,17 @@
                                 What is Film Productions?
                             </h3>
                         </div>
+
+                        <!-- JUSTIFY PARAGRAPHS -->
                         <div class="well">
+                            <!-- TODO FIX -->
                             <p>Film Productions is a student-run and student-led organization that focuses on the production of narrative short films.
                                 The club’s members are responsible for every step of production from conception to distribution.
                                 Through practical experience and several leadership opportunities,
-                                Film Productions hopes to artistically and professionally enrich Cal State LA students
-                                with any amount of interest in filmmaking.
-
+                                Film Productions hopes to artistically and professionally enrich Cal State LA students with any amount of interest in filmmaking.
                             </p>
-                            <a class="btn btn-gold center-block" href="projects.html">
-                                Wanna see our work?
+                                <a class="btn btn-gold center-block" href="projects.html">
+                                    Want to see our work?
                             </a>
                         </div>
                     </div>
@@ -157,6 +138,7 @@
                             </p>
                             <a class="btn btn-gold center-block" href="contact.html">
                                 Need to contact us?
+                                <!-- MAKE BUTTON LABEL MORE READABLE -->
                             </a>
                         </div>
                     </div>
@@ -176,7 +158,7 @@
 
                                 If you aren’t a film student but can’t resist the allure of show business, Film Productions is the club for you! Experienced officers and fellow club members will instruct you on your journey to become an independent filmmaker alongside them.<br/><br/>
 
-                                Whatever your interests are - whether they’re being on camera and seeing your performance on the big screen, developing skills in lighting in camerwork, writing your first screenplay, or anything else - Film Productions will provide an opportunity for you to do it. All you have to do is sign up.<br/><br/>
+                                Whatever your interests are - whether they’re being on camera and seeing your performance on the big screen, developing skills in lighting or camerwork, writing your first screenplay, or anything else - Film Productions will provide an opportunity for you to do it. All you have to do is sign up.<br/><br/>
 
                             </p>
                             <a class="btn btn-gold center-block" href="https://docs.google.com/forms/d/e/1FAIpQLSeMVL3I36a4X3QIkN6EQV3-BIrSXco6ozpO_Y2809Y-QrFtpA/viewform?usp=sf_link" target="_blank">
