--- a/pages/officers.html
+++ b/pages/officers.html
@@ -22,8 +22,8 @@
         <!--------------------------------START NAVBAR------------------------------>
         <nav class="navbar navbar-custom navbar-fixed-top">
             <div class="container ">
-                <a class="navbar-brand hidden-sm" href="http://http://www.calstatela.edu/">
-                    <img alt="acm" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
+                <a class="navbar-brand hidden-sm" href="https://www.calstatela.edu/" target="_blank">
+                    <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
                 </a>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -41,28 +41,15 @@
                             <ul class="dropdown-menu">
                                 <li><a href="contact.html">All Media</a></li>
                                 <li><a href="contact.html">Email</a></li>
-                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
-                                </li>
                                 <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                        target="_blank">YouTube</a></li>
+                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
+                                </li>
                                 <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a>
                                 </li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
                             </ul>
-
-                            <!--<li class="dropdown">-->
-                            <!--<a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
-                            <!--aria-haspopup="true"-->
-                            <!--aria-expanded="false">Officers<span class="caret"></span></a>-->
-                            <!--<ul class="dropdown-menu">-->
-                            <!--<li><a href="officers.html">All Officers</a></li>-->
-                            <!--<li><a href="officers.html?id=1">President</a></li>-->
-                            <!--<li><a href="officers.html?id=2">Vice President</a></li>-->
-                            <!--<li><a href="officers.html?id=3">Treasurer</a></li>-->
-                            <!--<li><a href="officers.html?id=4">Additional Officers</a></li>-->
-                            <!--</ul>-->
-                            <!--</li>-->
                     </ul>
 
                 </div>
@@ -102,13 +89,13 @@
                 <ul class="list-group col-xs-offset-1 col-xs-10">
                     <li class="list-group-item primaries">President</li>
                     <li class="list-group-item">
-                        The President of Film Productions is responsible for planning,
+                        <p>The President of Film Productions is responsible for planning,
                         organizing, and carrying out responsibilities associated with being the club’s chief executive
                         officer,
                         such as, but not limited to: appointing and delegating tasks, attending all meetings,
                         setting goals for the club and making sure the club stays on course,
                         solving problems within or regarding the club, and making sure each meeting is well planned and
-                        organized.
+                            organized.</p>
                     </li>
                 </ul>
             </div>
@@ -116,11 +103,11 @@
                 <ul class="list-group col-xs-offset-1 col-xs-10">
                     <li class="list-group-item primaries">Vice President</li>
                     <li class="list-group-item">
-                        The Vice-President of Film Productions fulfills the duties of the President when the President
+                        <p>The Vice-President of Film Productions fulfills the duties of the President when the President
                         is absent or otherwise unable,
                         or performs duties assigned by the President. This role is vital,
                         in that the Vice-President and the President must always remain in good standing and in contact
-                        with each other.
+                            with each other.</p>
                     </li>
                 </ul>
             </div>
@@ -128,10 +115,10 @@
                 <ul class="list-group col-xs-offset-1 col-xs-10">
                     <li class="list-group-item primaries">Treasurer</li>
                     <li class="list-group-item">
-                        The Treasurer establishes the organization’s budget and records any and all financial
+                        <p>The Treasurer establishes the organization’s budget and records any and all financial
                         transactions.
                         The Treasurer must generally attend all fundraiser and club events that have money involved and
-                        must consistently take inventory.
+                            must consistently take inventory.</p>
                     </li>
                 </ul>
             </div>
@@ -139,10 +126,10 @@
                 <ul class="list-group col-xs-offset-1 col-xs-10">
                     <li class="list-group-item primaries">Additional Executive Officers (2)</li>
                     <li class="list-group-item">
-                        Additional Executives generally assist all other Officers and help maintain productivity within
+                        <p>Additional Executives generally assist all other Officers and help maintain productivity within
                         the club.
                         Responsibilities may include but are not limited to: planning fundraisers and socials,
-                        being present when other Officers are unable.
+                            being present when other Officers are unable.</p>
                     </li>
                 </ul>
             </div>
@@ -150,21 +137,21 @@
                 <ul class="list-group col-xs-offset-1 col-xs-10">
                     <li class="list-group-item primaries">Supplementary Officers</li>
                     <li class="list-group-item">
-                        Supplementary officer positions may vary on a semester-to-semester basis depending on club needs.
+                        <p>Supplementary officer positions may vary on a semester-to-semester basis depending on club needs.
                         Officers oversee a specific club function and report to Executive Officers.
                         Applications for each semester open at the end of the semester that precedes it.
-                        Such positions may include:
+                            Such positions may include:</p>
                     </li>
                     <ul class="list-group col-xs-6" style="padding-right: 0">
-                        <li class="list-group-item">Head of Writing</li>
-                        <li class="list-group-item">Head of Fundraising</li>
-                        <li class="list-group-item">Head of Socials</li>
-                        <li class="list-group-item">Head(s) of Production</li>
+                        <li class="list-group-item"><p>Head of Writing</p></li>
+                        <li class="list-group-item"><p>Head of Fundraising</p></li>
+                        <li class="list-group-item"><p>Head of Socials</p></li>
+                        <li class="list-group-item"><p>Head(s) of Production</p></li>
                     </ul>
                     <ul class="list-group col-xs-6" style="padding-right: 0">
-                        <li class="list-group-item">Head of Marketing</li>
-                        <li class="list-group-item">Head of Production Design</li>
-                        <li class="list-group-item">Head of Equipment</li>
+                        <li class="list-group-item"><p>Head of Marketing</p></li>
+                        <li class="list-group-item"><p>Head of Production Design</p></li>
+                        <li class="list-group-item"><p>Head of Equipment</p></li>
                     </ul>
 
                 </ul>
