--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,8 +20,8 @@
 <!--------------------------------START NAVBAR------------------------------>
 <nav class="navbar navbar-custom navbar-fixed-top">
     <div class="container">
-        <a class="navbar-brand hidden-sm" href="http://http://www.calstatela.edu/">
-            <img alt="acm" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
+        <a class="navbar-brand hidden-sm" href="https://www.calstatela.edu/" target="_blank">
+            <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
         </a>
 
         <div class="collapse navbar-collapse">
@@ -40,9 +40,9 @@
                     <ul class="dropdown-menu">
                         <li><a href="contact.html">All Media</a></li>
                         <li><a href="contact.html">Email</a></li>
-                        <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                         <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                target="_blank">YouTube</a></li>
+                        <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                         <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                         <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                         <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
@@ -75,7 +75,7 @@
 
             <div class="vid-item" onClick="document.getElementById('vid_frame').src='http://youtube.com/embed/YyItLyjtl6U?autoplay=1&rel=0&showinfo=0&autohide=1'">
                 <div class="thumb"><img src="http://img.youtube.com/vi/YyItLyjtl6U/0.jpg"></div>
-                <div class="desc"></div>
+                <div class="desc">The Missing Woman</div>
             </div>
 
             <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/VRsCSRfoUTA?autoplay=1rel=0&showinfo=0&autohide=1'">
@@ -113,8 +113,8 @@
 
     <!-- LEFT AND RIGHT ARROWS -->
     <div class="arrows">
-        <div class="arrow-left"><i class="fa fa-chevron-left fa-lg"></i></div>
-        <div class="arrow-right"><i class="fa fa-chevron-right fa-lg"></i></div>
+        <div class="arrow-left"><i class="">&leftarrow;</i></div>
+        <div class="arrow-right"><i class="">&rightarrow;</i></div>
     </div>
 
 </div>
