--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -19,8 +19,8 @@
     <!--------------------------------START NAVBAR------------------------------>
     <nav class="navbar navbar-custom navbar-fixed-top">
         <div class="container ">
-            <a class="navbar-brand hidden-sm" href="http://http://www.calstatela.edu/">
-                <img alt="acm" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
+            <a class="navbar-brand hidden-sm" href="https://www.calstatela.edu/" target="_blank">
+                <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -38,9 +38,9 @@
                         <ul class="dropdown-menu">
                             <li><a href="contact.html">All Media</a></li>
                             <li><a href="contact.html">Email</a></li>
-                            <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                             <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                    target="_blank">YouTube</a></li>
+                            <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                             <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                             <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                             <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
