Styling on Projects page.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -57,7 +57,7 @@
 <!----------------------------------END NAVBAR-------------------------------------->
 <div class="title"><h2>Projects Playlist</h2></div>
 
-<div class="container">
+<div class="container player-container">
 
     <!-- THE YOUTUBE PLAYER -->
     <div class="vid-container">
@@ -78,12 +78,12 @@
                 <div class="desc">The Missing Woman</div>
             </div>
 
-            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/VRsCSRfoUTA?autoplay=1rel=0&showinfo=0&autohide=1'">
+            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/VRsCSRfoUTA?autoplay=1&rel=0&showinfo=0&autohide=1'">
                 <div class="thumb"><img src="https://img.youtube.com/vi/VRsCSRfoUTA/0.jpg"></div>
                 <div class="desc">Two Dudes go to a Party</div>
             </div>
 
-            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/UOFgemG9sRc?autoplay=1rel=0&showinfo=0&autohide=1'">
+            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/UOFgemG9sRc?autoplay=1&rel=0&showinfo=0&autohide=1'">
                 <div class="thumb"><img src="http://img.youtube.com/vi/UOFgemG9sRc/0.jpg"></div>
                 <div class="desc">iPredict</div>
             </div>
