--- a/pages/Main.html
+++ b/pages/Main.html
@@ -87,7 +87,7 @@
             <!---------------------------END HEADER--------------------------->
 
             <!-- INSERT INTRO VIDEO HERE -->
-        <iframe class="center-block" width="560" height="315" src="https://www.youtube-nocookie.com/embed/gIJeK_isnyQ?loop=1&amp;rel=0&amp;controls=1&amp;&playlist=gIJeK_isnyQ&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="border-width:2px"></iframe>
+        <iframe class="center-block" width="560" height="315" src="https://www.youtube.com/embed/gIJeK_isnyQ?loop=1&amp;rel=0&amp;controls=0&amp;&playlist=gIJeK_isnyQ&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="border-width:2px"></iframe>
             <!-------------------------START PAGE CONTENT----------------------------->
 \
 
