--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -45,19 +45,6 @@
                             <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                             <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
                         </ul>
-
-                        <!--<li class="dropdown">-->
-                        <!--<a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
-                        <!--aria-haspopup="true"-->
-                        <!--aria-expanded="false">Officers<span class="caret"></span></a>-->
-                        <!--<ul class="dropdown-menu">-->
-                        <!--<li><a href="officers.html">All Officers</a></li>-->
-                        <!--<li><a href="officers.html?id=1">President</a></li>-->
-                        <!--<li><a href="officers.html?id=2">Vice President</a></li>-->
-                        <!--<li><a href="officers.html?id=3">Treasurer</a></li>-->
-                        <!--<li><a href="officers.html?id=4">Additional Officers</a></li>-->
-                        <!--</ul>-->
-                        <!--</li>-->
                 </ul>
 
             </div>
@@ -71,15 +58,9 @@
 
 
     <header style="margin-top: 75px; text-align: center">
-        <h2>Calendar</h2>
+        <h2>Film Productions Calendar</h2>
     </header>
     <div class="container">
-
-
-        <center>
-            <h4>You may sync our Calendar to yours and keep up with all our events and meetings.</h4>
-            <p>Simply <a href="#">click</a></p>
-        </center>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
                 <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=filmproductionsla%40gmail.com&ctz=America%2FLos_Angeles" style="border: 0" width="100%" height="600px" frameborder="0" scrolling="no"></iframe>
