--- a/pages/contact.html
+++ b/pages/contact.html
@@ -84,7 +84,7 @@
                 <img src="../Images/Snapchat%20Outline.png" class="logo-images">
             </a>
             <a class="col-xs-4" href="https://twitter.com/csulafp" target="_blank">
-                <img src="../Images/twitter-outline.png" class="logo-images" ">
+                <img src="../Images/twitter-outline.png" class="logo-images" >
             </a>
         </div>
     </div>
