Added Copyright message too all pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -90,5 +90,11 @@
     </div>
 </div>
 
+<footer>
+    <div class="well well-sm text-center" style="margin-top: 50px">
+        &copy; 2017 Film Productions Club @ Cal State LA. All Rights Reserved.
+    </div>
+</footer>
+
 </body>
 </html>
