--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -67,6 +67,12 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="well well-sm text-center" style="margin-top: 50px">
+            &copy; 2017 Film Productions Club @ Cal State LA. All Rights Reserved.
+        </div>
+    </footer>
 </div>
 </body>
 </html>
