--- a/pages/projects.html
+++ b/pages/projects.html
@@ -153,9 +153,13 @@
 
 </script>
 
-
-
 <!---------------------------- END PAGE CONTENT -------------------------------->
+
+<footer>
+    <div class="well well-sm text-center" style="margin-top: 50px">
+        &copy; 2017 Film Productions Club @ Cal State LA. All Rights Reserved.
+    </div>
+</footer>
 </div>
 </body>
 </html>
