Added Discord to Social Media Links

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,6 +49,7 @@
                         <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                         <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                         <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
+                        <li><a href="https://discord.gg/uuX4pDE" target="_blank">Discord</a></li>
                     </ul>
             </ul>
 
@@ -85,6 +86,9 @@
             </a>
             <a class="col-xs-4" href="https://twitter.com/csulafp" target="_blank">
                 <img src="../Images/twitter-outline.png" class="logo-images" >
+            </a>
+            <a class="col-xs-4 col-xs-offset-4" href="https://discord.gg/uuX4pDE" target="_blank">
+                <img src="../Images/discord-logo.png" class="logo-images">
             </a>
         </div>
     </div>
