--- a/pages/officers.html
+++ b/pages/officers.html
@@ -43,12 +43,11 @@
                                 <li><a href="contact.html">Email</a></li>
                                 <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                        target="_blank">YouTube</a></li>
-                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
-                                </li>
-                                <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a>
-                                </li>
+                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
+                                <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
+                                <li><a href="https://discord.gg/uuX4pDE" target="_blank">Discord</a></li>
                             </ul>
                     </ul>
 
