--- a/pages/projects.html
+++ b/pages/projects.html
@@ -46,6 +46,7 @@
                         <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                         <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                         <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
+                        <li><a href="https://discord.gg/uuX4pDE" target="_blank">Discord</a></li>
                     </ul>
             </ul>
 
