Added mobile navbar on all pages

--- a/pages/Main.html
+++ b/pages/Main.html
@@ -10,62 +10,70 @@
     <link rel="icon" href="../Images/CSULALogo.png">
 
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
-    <link rel="stylesheet" href="../css/main-styles.css">
     <link rel="stylesheet" href="../css/global-styles.css">
+    <link rel="stylesheet" href="../css/main-styles.css">
 
     <script async defer src="http://platform.instagram.com/en_US/embeds.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
 </head>
 
 <body>
 
+<!--------------------------------START NAVBAR------------------------------>
+<nav class="navbar navbar-custom navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-expanded="false">
+                <span class="glyphicon glyphicon-th-list"></span>
+            </button>
+            <a class="navbar-brand hidden-xs" href="https://www.calstatela.edu/" target="_blank">
+                <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs">
+            </a>
+        </div>
+
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active-tab"><a href="Main.html">Home</a></li>
+                <li><a href="calendar.html">Calendar</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="officers.html">Officers</a></li>
+                <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
+
+                <li class="dropdown">
+                    <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                       aria-haspopup="true" aria-expanded="false">
+                        Contact<span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="contact.html">All Media</a></li>
+                        <li><a href="contact.html">Email</a></li>
+                        <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
+                               target="_blank">YouTube</a></li>
+                        <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
+                        <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
+                        <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
+                        <li><a href="https://discord.gg/uuX4pDE" target="_blank">Discord</a></li>
+                    </ul>
+
+            </ul>
+
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+<!----------------------------------END NAVBAR-------------------------------------->
 <!--<img class="filmstrip" src="../Images/long-filmstrip.gif">-->
 
 <div id="wrapper">
 
     <div id="page-content-wrapper" >
-
-        <!--------------------------------START NAVBAR------------------------------>
-        <nav class="navbar navbar-custom navbar-fixed-top">
-            <div class="container">
-                <a class="navbar-brand hidden-sm" href="https://www.calstatela.edu/" target="_blank">
-                    <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
-                </a>
-
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active-tab"><a href="Main.html">Home</a></li>
-                        <li><a href="calendar.html">Calendar</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                        <li><a href="officers.html">Officers</a></li>
-                        <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
-
-                        <li class="dropdown">
-                            <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-haspopup="true" aria-expanded="false">
-                                Contact<span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="contact.html">All Media</a></li>
-                                <li><a href="contact.html">Email</a></li>
-                                <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
-                                       target="_blank">YouTube</a></li>
-                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
-                                <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
-                                <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
-                                <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                                <li><a href="https://discord.gg/uuX4pDE" target="_blank">Discord</a></li>
-                            </ul>
-
-                    </ul>
-
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
-        <!----------------------------------END NAVBAR-------------------------------------->
 
 
         <!------------------------------------START HEADER---------------------------->
@@ -88,7 +96,7 @@
             <!---------------------------END HEADER--------------------------->
 
             <!-- INSERT INTRO VIDEO HERE -->
-        <iframe class="center-block" width="560" height="315" src="https://www.youtube.com/embed/gIJeK_isnyQ?loop=1&amp;rel=0&amp;controls=0&amp;&playlist=gIJeK_isnyQ&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="border-width:2px"></iframe>
+        <iframe class="center-block" width="560" height="315" src="https://www.youtube.com/embed/gIJeK_isnyQ?loop=1&amp;rel=0&amp;controls=0&amp;&playlist=gIJeK_isnyQ&amp;showinfo=0" frameborder="0"  allowfullscreen style="border-width:2px"></iframe>
             <!-------------------------START PAGE CONTENT----------------------------->
 \
 
