--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/global-styles.css">
     <link rel="stylesheet" href="../css/contact-styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>-->
 
-    <script type="text/javascript" src="../Javascript/instafeed.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <!--<script type="text/javascript" src="../Javascript/instafeed.min.js"></script>-->
+    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -21,12 +21,20 @@
 </head>
 <body>
 
+
 <!--------------------------------START NAVBAR------------------------------>
 <nav class="navbar navbar-custom navbar-fixed-top">
     <div class="container ">
-        <a class="navbar-brand hidden-sm" href="https://www.calstatela.edu/" target="_blank">
-            <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
-        </a>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-expanded="false">
+                <span class="glyphicon glyphicon-th-list"></span>
+            </button>
+            <a class="navbar-brand hidden-xs" href="https://www.calstatela.edu/" target="_blank">
+                <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs">
+            </a>
+        </div>
+
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="Main.html">Home</a></li>
@@ -65,10 +73,11 @@
     </h2>
     <div class="container">
         <div class="row">
-                <a class="col-xs-4" href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">
-                    <img class="logo-images" style="filter:grayscale(0%)" src="../Images/gmail-icon.png">
-                </a>
-            <a class="col-xs-4" href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">
+            <a class="col-xs-4" href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">
+                <img class="logo-images" style="filter:grayscale(0%)" src="../Images/gmail-icon.png">
+            </a>
+            <a class="col-xs-4" href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
+               target="_blank">
                 <img src="../Images/YouTube%20Outline.png" class="logo-images">
             </a>
 
@@ -85,7 +94,7 @@
                 <img src="../Images/Snapchat%20Outline.png" class="logo-images">
             </a>
             <a class="col-xs-4" href="https://twitter.com/csulafp" target="_blank">
-                <img src="../Images/twitter-outline.png" class="logo-images" >
+                <img src="../Images/twitter-outline.png" class="logo-images">
             </a>
             <a class="col-xs-4 col-xs-offset-4" href="https://discord.gg/uuX4pDE" target="_blank">
                 <img src="../Images/discord-logo.png" class="logo-images">
