--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="../css/global-styles.css">
     <link rel="stylesheet" href="../css/projects-styles.css">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
 </head>
@@ -20,9 +21,15 @@
 <!--------------------------------START NAVBAR------------------------------>
 <nav class="navbar navbar-custom navbar-fixed-top">
     <div class="container">
-        <a class="navbar-brand hidden-sm" href="https://www.calstatela.edu/" target="_blank">
-            <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
-        </a>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse"
+                    aria-expanded="false">
+                <span class="glyphicon glyphicon-th-list"></span>
+            </button>
+            <a class="navbar-brand hidden-xs" href="https://www.calstatela.edu/" target="_blank">
+                <img alt="csula" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs">
+            </a>
+        </div>
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
